Fix: Banners/Modals z-index to stay in front of menus

--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ button {
 .modal {
     display: none; 
     position: fixed; 
-    z-index: 2000; 
+    z-index: 3000; 
     left: 0;
     top: 0;
     width: 100%; 
